syntax = "proto3";

option java_multiple_files = true;
option java_package = "ai.wanaku.core.exchange";
option java_outer_classname = "InquiryExchange";

package tool;

// The inquirer exchange service definition.
service Inquirer {
  // Invokes a tool
  rpc Inquire (InquireRequest) returns (InquireReply) {}
}

// The invocation request message
message InquireRequest {

}

message PropertySchema {
  string type = 1;
  string description = 2;
  bool required = 3;
}

// The invocation response message
message InquireReply {
  map<string, PropertySchema> properties = 1;
}